# hilbert-curve

./: .clang-format  .gitignore  3d_paths.cpp  CMakeLists.txt  README.md  benchmark.cpp  example.cpp  hilbert.cpp  hilbert.hpp  hilbert_test.cpp  main.cpp  main_adj.cpp  mats.cpp  rotate.cpp  sizes.txt  solution.txt  temp.cpp
test_data/: 10_1  1_3  1_6  1_7  1_9  2_1  2_2  2_3  2_4  2_5  2_6  2_7  3_1  3_2  3_3  3_4  4_1  4_2  4_3  5_1  5_2  6_1  6_2  7_1  8_1  9_1
